# forge-agent-workflow

./: CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
docs/: claude-for-oss-application.md  concepts.md  safety-model.md
examples/: branch_prompt_example.md  evidence_pack_example.md
forge_workflow/: __init__.py  validate_evidence.py
tests/: test_validate_evidence.py
